[gd_scene load_steps=17 format=3 uid="uid://c1odbh7djftwk"]

[ext_resource type="Script" path="res://Assets/Scenes/pushableRock.gd" id="1_c5q0t"]
[ext_resource type="Texture2D" uid="uid://cadtenj8ktfqm" path="res://Assets/Models/Rock Models/rock_10_rock_3.png" id="2_sdcgl"]
[ext_resource type="Texture2D" uid="uid://c72u2xhcs50gi" path="res://Assets/Models/Rock Models/rock_10_rock_3_n.png" id="3_8oslf"]
[ext_resource type="Texture2D" uid="uid://ctssg8kbj087q" path="res://Assets/Textures/rock_3.png" id="4_suxil"]

[sub_resource type="PlaceholderMesh" id="PlaceholderMesh_pv0oc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_38jnt"]
size = Vector3(1.2345, 0.230927, 3.17871)

[sub_resource type="BoxShape3D" id="BoxShape3D_kt7ec"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0wg3h"]
resource_name = "Material.002"
cull_mode = 2
albedo_texture = ExtResource("2_sdcgl")
roughness = 0.5
normal_enabled = true
normal_texture = ExtResource("3_8oslf")
texture_filter = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ffmp5"]
resource_name = "Material.003"
cull_mode = 2
albedo_texture = ExtResource("3_8oslf")
roughness = 0.5
normal_enabled = true
normal_texture = ExtResource("3_8oslf")
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_tle4v"]
_surfaces = [{
"aabb": AABB(-0.617607, -1.75427, -0.932054, 2.72571, 11.6365, 3.07887),
"format": 34896613377,
"index_count": 144,
"index_data": PackedByteArray(13, 0, 25, 0, 0, 0, 13, 0, 31, 0, 25, 0, 22, 0, 6, 0, 9, 0, 22, 0, 18, 0, 6, 0, 24, 0, 4, 0, 14, 0, 24, 0, 20, 0, 4, 0, 16, 0, 3, 0, 15, 0, 16, 0, 10, 0, 3, 0, 23, 0, 2, 0, 13, 0, 23, 0, 19, 0, 2, 0, 21, 0, 0, 0, 11, 0, 21, 0, 17, 0, 0, 0, 20, 0, 11, 0, 4, 0, 20, 0, 21, 0, 11, 0, 12, 0, 7, 0, 16, 0, 16, 0, 7, 0, 10, 0, 19, 0, 9, 0, 2, 0, 19, 0, 22, 0, 9, 0, 2, 0, 31, 0, 13, 0, 2, 0, 26, 0, 31, 0, 4, 0, 32, 0, 14, 0, 4, 0, 27, 0, 32, 0, 5, 0, 16, 0, 8, 0, 5, 0, 12, 0, 16, 0, 17, 0, 13, 0, 0, 0, 17, 0, 23, 0, 13, 0, 8, 0, 15, 0, 1, 0, 8, 0, 16, 0, 15, 0, 18, 0, 14, 0, 6, 0, 18, 0, 24, 0, 14, 0, 14, 0, 28, 0, 6, 0, 14, 0, 32, 0, 28, 0, 33, 0, 28, 0, 32, 0, 33, 0, 29, 0, 28, 0, 31, 0, 29, 0, 33, 0, 31, 0, 26, 0, 29, 0, 25, 0, 33, 0, 30, 0, 25, 0, 31, 0, 33, 0, 30, 0, 32, 0, 27, 0, 30, 0, 33, 0, 32, 0, 0, 0, 30, 0, 11, 0, 0, 0, 25, 0, 30, 0, 6, 0, 29, 0, 9, 0, 6, 0, 28, 0, 29, 0, 11, 0, 27, 0, 4, 0, 11, 0, 30, 0, 27, 0, 9, 0, 26, 0, 2, 0, 9, 0, 29, 0, 26, 0),
"name": "Material.002",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 34,
"vertex_data": PackedByteArray(4, 240, 171, 217, 229, 89, 0, 0, 255, 255, 0, 0, 15, 49, 0, 0, 78, 210, 183, 217, 172, 191, 0, 0, 36, 223, 90, 5, 149, 217, 0, 0, 215, 26, 219, 216, 27, 54, 0, 0, 80, 21, 124, 7, 83, 30, 0, 0, 29, 37, 109, 213, 145, 228, 0, 0, 221, 17, 8, 8, 216, 221, 0, 0, 134, 102, 133, 3, 0, 0, 0, 0, 50, 127, 24, 225, 46, 210, 0, 0, 91, 85, 101, 6, 255, 255, 0, 0, 141, 137, 151, 227, 182, 78, 0, 0, 0, 0, 134, 4, 90, 97, 0, 0, 232, 222, 226, 219, 143, 106, 0, 0, 121, 35, 132, 226, 149, 112, 0, 0, 146, 250, 128, 1, 182, 177, 0, 0, 86, 37, 245, 1, 124, 176, 0, 0, 1, 184, 67, 51, 245, 95, 0, 0, 205, 76, 30, 54, 40, 173, 0, 0, 24, 169, 93, 53, 243, 168, 0, 0, 113, 77, 35, 54, 41, 86, 0, 0, 220, 116, 83, 53, 251, 75, 0, 0, 109, 109, 71, 54, 67, 185, 0, 0, 180, 180, 1, 52, 123, 147, 0, 0, 177, 69, 165, 53, 110, 116, 0, 0, 189, 202, 121, 245, 200, 97, 0, 0, 90, 186, 128, 245, 237, 153, 0, 0, 37, 85, 6, 245, 11, 78, 0, 0, 208, 90, 34, 243, 71, 174, 0, 0, 129, 140, 146, 249, 35, 164, 0, 0, 56, 146, 242, 250, 157, 91, 0, 0, 77, 193, 178, 246, 250, 106, 0, 0, 233, 89, 91, 250, 76, 110, 0, 0, 115, 143, 255, 255, 97, 112, 0, 0)
}, {
"aabb": AABB(-0.617607, -1.75427, -0.932054, 2.72572, 2.46739, 3.07887),
"format": 34896613377,
"index_count": 48,
"index_data": PackedByteArray(3, 0, 15, 0, 9, 0, 3, 0, 6, 0, 15, 0, 0, 0, 14, 0, 8, 0, 0, 0, 7, 0, 14, 0, 1, 0, 13, 0, 10, 0, 1, 0, 5, 0, 13, 0, 2, 0, 12, 0, 11, 0, 2, 0, 4, 0, 12, 0, 4, 0, 8, 0, 12, 0, 4, 0, 0, 0, 8, 0, 7, 0, 10, 0, 14, 0, 7, 0, 1, 0, 10, 0, 6, 0, 11, 0, 15, 0, 6, 0, 2, 0, 11, 0, 5, 0, 9, 0, 13, 0, 5, 0, 3, 0, 9, 0),
"name": "Material.003",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray(254, 255, 0, 0, 15, 49, 0, 0, 36, 223, 65, 25, 149, 217, 0, 0, 80, 21, 77, 35, 83, 30, 0, 0, 221, 17, 228, 37, 216, 221, 0, 0, 134, 102, 155, 16, 0, 0, 0, 0, 91, 85, 44, 30, 255, 255, 0, 0, 0, 0, 85, 21, 90, 97, 0, 0, 145, 250, 21, 7, 182, 177, 0, 0, 1, 184, 197, 241, 245, 95, 0, 0, 205, 76, 59, 255, 40, 173, 0, 0, 24, 169, 172, 251, 243, 168, 0, 0, 113, 77, 84, 255, 41, 86, 0, 0, 220, 116, 126, 251, 251, 75, 0, 0, 109, 109, 255, 255, 67, 185, 0, 0, 179, 180, 67, 245, 123, 147, 0, 0, 177, 69, 255, 252, 110, 116, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_cuuiv"]
resource_name = "rock_10_Cube_015"
_surfaces = [{
"aabb": AABB(-0.617607, -1.75427, -0.932054, 2.72571, 11.6365, 3.07887),
"attribute_data": PackedByteArray(0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255),
"format": 34896613399,
"index_count": 144,
"index_data": PackedByteArray(28, 0, 58, 0, 2, 0, 28, 0, 72, 0, 58, 0, 51, 0, 13, 0, 20, 0, 51, 0, 42, 0, 13, 0, 55, 0, 9, 0, 33, 0, 55, 0, 46, 0, 9, 0, 37, 0, 7, 0, 35, 0, 37, 0, 21, 0, 7, 0, 53, 0, 5, 0, 30, 0, 53, 0, 44, 0, 5, 0, 49, 0, 1, 0, 25, 0, 49, 0, 40, 0, 1, 0, 47, 0, 24, 0, 10, 0, 47, 0, 48, 0, 24, 0, 27, 0, 15, 0, 39, 0, 39, 0, 15, 0, 22, 0, 45, 0, 19, 0, 6, 0, 45, 0, 50, 0, 19, 0, 4, 0, 74, 0, 30, 0, 4, 0, 59, 0, 74, 0, 8, 0, 76, 0, 33, 0, 8, 0, 61, 0, 76, 0, 11, 0, 38, 0, 17, 0, 11, 0, 26, 0, 38, 0, 41, 0, 29, 0, 2, 0, 41, 0, 52, 0, 29, 0, 16, 0, 34, 0, 3, 0, 16, 0, 36, 0, 34, 0, 43, 0, 32, 0, 14, 0, 43, 0, 54, 0, 32, 0, 31, 0, 65, 0, 14, 0, 31, 0, 75, 0, 65, 0, 79, 0, 65, 0, 77, 0, 79, 0, 66, 0, 65, 0, 73, 0, 67, 0, 81, 0, 73, 0, 59, 0, 67, 0, 57, 0, 80, 0, 71, 0, 57, 0, 72, 0, 80, 0, 69, 0, 76, 0, 63, 0, 69, 0, 78, 0, 76, 0, 0, 0, 70, 0, 25, 0, 0, 0, 56, 0, 70, 0, 12, 0, 67, 0, 20, 0, 12, 0, 64, 0, 67, 0, 23, 0, 62, 0, 10, 0, 23, 0, 68, 0, 62, 0, 18, 0, 60, 0, 6, 0, 18, 0, 66, 0, 60, 0),
"material": SubResource("StandardMaterial3D_0wg3h"),
"name": "Material.002",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 82,
"vertex_data": PackedByteArray(4, 240, 171, 217, 229, 89, 76, 215, 4, 240, 171, 217, 229, 89, 74, 227, 4, 240, 171, 217, 229, 89, 124, 227, 255, 255, 0, 0, 15, 49, 170, 233, 78, 210, 183, 217, 172, 191, 114, 163, 78, 210, 183, 217, 172, 191, 131, 197, 78, 210, 183, 217, 172, 191, 13, 166, 36, 223, 90, 5, 149, 217, 231, 158, 215, 26, 219, 216, 27, 54, 28, 227, 215, 26, 219, 216, 27, 54, 17, 232, 215, 26, 219, 216, 27, 54, 214, 228, 80, 21, 124, 7, 83, 30, 232, 236, 29, 37, 109, 213, 145, 228, 178, 170, 29, 37, 109, 213, 145, 228, 244, 193, 29, 37, 109, 213, 145, 228, 155, 168, 221, 17, 8, 8, 216, 221, 25, 169, 134, 102, 133, 3, 0, 0, 84, 235, 134, 102, 133, 3, 0, 0, 93, 235, 50, 127, 24, 225, 46, 210, 91, 145, 50, 127, 24, 225, 46, 210, 169, 191, 50, 127, 24, 225, 46, 210, 67, 152, 91, 85, 101, 6, 255, 255, 140, 146, 91, 85, 101, 6, 255, 255, 98, 145, 141, 137, 151, 227, 182, 78, 107, 248, 141, 137, 151, 227, 182, 78, 197, 252, 141, 137, 151, 227, 182, 78, 146, 249, 0, 0, 134, 4, 90, 97, 161, 196, 0, 0, 134, 4, 90, 97, 161, 196, 232, 222, 226, 219, 143, 106, 118, 179, 232, 222, 226, 219, 143, 106, 177, 206, 232, 222, 226, 219, 143, 106, 88, 178, 121, 35, 132, 226, 149, 112, 227, 195, 121, 35, 132, 226, 149, 112, 120, 204, 121, 35, 132, 226, 149, 112, 253, 191, 146, 250, 128, 1, 182, 177, 197, 188, 146, 250, 128, 1, 182, 177, 156, 186, 86, 37, 245, 1, 124, 176, 20, 186, 86, 37, 245, 1, 124, 176, 9, 188, 86, 37, 245, 1, 124, 176, 156, 185, 86, 37, 245, 1, 124, 176, 125, 191, 1, 184, 67, 51, 245, 95, 89, 234, 1, 184, 67, 51, 245, 95, 87, 233, 205, 76, 30, 54, 40, 173, 135, 195, 205, 76, 30, 54, 40, 173, 163, 197, 24, 169, 93, 53, 243, 168, 189, 199, 24, 169, 93, 53, 243, 168, 155, 200, 113, 77, 35, 54, 41, 86, 156, 227, 113, 77, 35, 54, 41, 86, 223, 227, 220, 116, 83, 53, 251, 75, 144, 253, 220, 116, 83, 53, 251, 75, 98, 253, 109, 109, 71, 54, 67, 185, 153, 191, 109, 109, 71, 54, 67, 185, 217, 194, 180, 180, 1, 52, 123, 147, 87, 209, 180, 180, 1, 52, 123, 147, 216, 211, 177, 69, 165, 53, 110, 116, 115, 210, 177, 69, 165, 53, 110, 116, 110, 211, 189, 202, 121, 245, 200, 97, 95, 225, 189, 202, 121, 245, 200, 97, 11, 229, 189, 202, 121, 245, 200, 97, 47, 210, 90, 186, 128, 245, 237, 153, 72, 241, 90, 186, 128, 245, 237, 153, 61, 174, 37, 85, 6, 245, 11, 78, 254, 227, 37, 85, 6, 245, 11, 78, 134, 245, 37, 85, 6, 245, 11, 78, 134, 245, 208, 90, 34, 243, 71, 174, 82, 175, 208, 90, 34, 243, 71, 174, 190, 233, 129, 140, 146, 249, 35, 164, 220, 163, 129, 140, 146, 249, 35, 164, 246, 167, 56, 146, 242, 250, 157, 91, 126, 244, 56, 146, 242, 250, 157, 91, 22, 245, 56, 146, 242, 250, 157, 91, 103, 253, 56, 146, 242, 250, 157, 91, 103, 253, 77, 193, 178, 246, 250, 106, 71, 234, 77, 193, 178, 246, 250, 106, 58, 236, 77, 193, 178, 246, 250, 106, 178, 195, 233, 89, 91, 250, 76, 110, 247, 206, 233, 89, 91, 250, 76, 110, 120, 242, 233, 89, 91, 250, 76, 110, 136, 238, 115, 143, 255, 255, 97, 112, 113, 251, 115, 143, 255, 255, 97, 112, 85, 254, 115, 143, 255, 255, 97, 112, 217, 251, 115, 143, 255, 255, 97, 112, 201, 253, 27, 82, 243, 26, 253, 48, 93, 48, 166, 48, 150, 48, 63, 1, 155, 170, 107, 157, 249, 2, 95, 35, 24, 25, 187, 153, 13, 60, 175, 66, 22, 49, 79, 177, 179, 217, 111, 201, 55, 201, 174, 98, 18, 211, 153, 44, 43, 139, 188, 210, 3, 227, 191, 231, 247, 223, 139, 117, 41, 189, 127, 98, 189, 221, 142, 4, 6, 132, 220, 2, 254, 126, 150, 179, 209, 106, 175, 234, 174, 5, 87, 226, 228, 28, 41, 52, 82, 146, 251, 30, 39, 177, 234, 150, 228, 20, 206, 62, 207, 57, 118, 102, 3, 20, 135, 82, 8, 219, 135, 82, 8, 219, 62, 152, 47, 45, 146, 40, 109, 33, 58, 145, 206, 1, 17, 124, 137, 220, 102, 215, 140, 205, 145, 176, 85, 219, 75, 37, 9, 58, 141, 42, 102, 57, 103, 28, 165, 143, 171, 29, 40, 131, 181, 27, 129, 150, 104, 41, 203, 198, 19, 50, 31, 46, 185, 51, 230, 44, 177, 229, 191, 217, 72, 231, 124, 217, 33, 34, 175, 22, 152, 33, 238, 22, 164, 202, 149, 198, 164, 203, 246, 197, 108, 188, 64, 187, 209, 189, 232, 185, 174, 243, 36, 5, 224, 243, 127, 4, 14, 44, 160, 33, 172, 41, 228, 34, 94, 215, 247, 208, 171, 216, 103, 208, 246, 69, 222, 22, 167, 63, 47, 28, 85, 182, 230, 64, 158, 31, 20, 27, 24, 183, 208, 80, 143, 182, 33, 195, 206, 103, 137, 204, 206, 103, 137, 204, 72, 236, 130, 194, 137, 113, 12, 165, 125, 236, 117, 119, 226, 230, 214, 67, 4, 172, 70, 17, 185, 170, 99, 15, 179, 85, 129, 12, 179, 85, 129, 12, 58, 49, 132, 25, 198, 47, 227, 26, 104, 183, 196, 27, 62, 151, 50, 196, 190, 104, 254, 180, 33, 108, 14, 184, 187, 189, 22, 0, 124, 64, 69, 3, 22, 66, 101, 0, 129, 135, 31, 190)
}, {
"aabb": AABB(-0.617607, -1.75427, -0.932054, 2.72572, 2.46739, 3.07887),
"attribute_data": PackedByteArray(0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 255, 255),
"format": 34896613399,
"index_count": 48,
"index_data": PackedByteArray(7, 0, 30, 0, 19, 0, 7, 0, 12, 0, 30, 0, 1, 0, 28, 0, 17, 0, 1, 0, 14, 0, 28, 0, 3, 0, 26, 0, 21, 0, 3, 0, 10, 0, 26, 0, 5, 0, 24, 0, 23, 0, 5, 0, 8, 0, 24, 0, 9, 0, 16, 0, 25, 0, 9, 0, 0, 0, 16, 0, 15, 0, 20, 0, 29, 0, 15, 0, 2, 0, 20, 0, 13, 0, 22, 0, 31, 0, 13, 0, 4, 0, 22, 0, 11, 0, 18, 0, 27, 0, 11, 0, 6, 0, 18, 0),
"material": SubResource("StandardMaterial3D_ffmp5"),
"name": "Material.003",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 32,
"vertex_data": PackedByteArray(254, 255, 0, 0, 15, 49, 8, 216, 254, 255, 0, 0, 15, 49, 29, 214, 36, 223, 65, 25, 149, 217, 180, 194, 36, 223, 65, 25, 149, 217, 15, 183, 80, 21, 77, 35, 83, 30, 210, 240, 80, 21, 77, 35, 83, 30, 137, 237, 221, 17, 228, 37, 216, 221, 75, 208, 221, 17, 228, 37, 216, 221, 200, 198, 134, 102, 155, 16, 0, 0, 160, 241, 134, 102, 155, 16, 0, 0, 140, 244, 91, 85, 44, 30, 255, 255, 193, 191, 91, 85, 44, 30, 255, 255, 244, 183, 0, 0, 85, 21, 90, 97, 130, 227, 0, 0, 85, 21, 90, 97, 136, 221, 145, 250, 21, 7, 182, 177, 104, 194, 145, 250, 21, 7, 182, 177, 17, 191, 1, 184, 197, 241, 245, 95, 51, 238, 1, 184, 197, 241, 245, 95, 36, 234, 205, 76, 59, 255, 40, 173, 171, 202, 205, 76, 59, 255, 40, 173, 140, 197, 24, 169, 172, 251, 243, 168, 196, 203, 24, 169, 172, 251, 243, 168, 83, 200, 113, 77, 84, 255, 41, 86, 214, 228, 113, 77, 84, 255, 41, 86, 129, 227, 220, 116, 126, 251, 251, 75, 179, 252, 220, 116, 126, 251, 251, 75, 71, 253, 109, 109, 255, 255, 67, 185, 122, 196, 109, 109, 255, 255, 67, 185, 255, 186, 179, 180, 67, 245, 123, 147, 13, 216, 179, 180, 67, 245, 123, 147, 90, 209, 177, 69, 255, 252, 110, 116, 95, 213, 177, 69, 255, 252, 110, 116, 68, 208, 86, 48, 68, 64, 14, 61, 106, 58, 177, 10, 53, 42, 56, 19, 65, 43, 206, 201, 245, 211, 241, 195, 229, 216, 134, 218, 208, 229, 99, 211, 181, 233, 69, 69, 145, 73, 146, 80, 121, 64, 162, 24, 28, 243, 250, 24, 138, 239, 153, 203, 211, 226, 27, 197, 31, 232, 24, 27, 70, 59, 181, 32, 152, 58, 31, 44, 137, 50, 105, 50, 224, 45, 216, 234, 229, 216, 55, 231, 126, 217, 186, 31, 201, 23, 196, 33, 218, 22, 25, 207, 209, 195, 57, 202, 215, 198, 58, 195, 179, 180, 164, 190, 29, 185, 247, 243, 48, 4, 98, 243, 33, 6, 243, 37, 223, 36, 11, 44, 161, 33, 34, 219, 84, 207, 81, 212, 75, 210)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_tle4v")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_10ww7"]
albedo_texture = ExtResource("4_suxil")
emission_enabled = true

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_o2l6s"]
data = PackedVector3Array(1.7558, 8.24072, 0.349572, 1.54107, 9.40402, 0.244005, 1.93796, 8.14008, 0.149119, 1.7558, 8.24072, 0.349572, 1.44058, 9.45953, 0.354579, 1.54107, 9.40402, 0.244005, 0.547527, 0.713121, 1.29611, -0.222416, 7.9472, 1.81693, 0.736715, 8.47769, 1.59582, 0.547527, 0.713121, 1.29611, 0.200138, 0.705747, 1.15051, -0.222416, 7.9472, 1.81693, 0.124457, 0.684209, 0.468262, -0.331822, 8.10313, -0.281313, -0.239878, 8.54229, 0.421987, 0.124457, 0.684209, 0.468262, 0.206985, 0.706708, 0.104212, -0.331822, 8.10313, -0.281313, -0.220039, -1.66516, 1.19055, 1.75831, -1.51086, 1.68483, 2.05034, -1.68599, 1.20529, -0.220039, -1.66516, 1.19055, 0.291253, -1.46345, 2.14681, 1.75831, -1.51086, 1.68483, 1.30643, 0.609678, 0.841696, 1.62163, 8.14229, 1.37321, 1.7558, 8.24072, 0.349572, 1.30643, 0.609678, 0.841696, 1.18285, 0.671477, 1.09991, 1.62163, 8.14229, 1.37321, 0.626682, 0.669729, -0.0182351, 1.93796, 8.14008, 0.149119, 0.847003, 8.5911, 0.0146146, 0.626682, 0.669729, -0.0182351, 1.34158, 0.576015, 0.222051, 1.93796, 8.14008, 0.149119, 0.206985, 0.706708, 0.104212, 0.847003, 8.5911, 0.0146146, -0.331822, 8.10313, -0.281313, 0.206985, 0.706708, 0.104212, 0.626682, 0.669729, -0.0182351, 0.847003, 8.5911, 0.0146146, -0.617607, -1.54864, 0.238833, -0.427392, -1.38905, 1.73608, -0.220039, -1.66516, 1.19055, -0.220039, -1.66516, 1.19055, -0.427392, -1.38905, 1.73608, 0.291253, -1.46345, 2.14681, 1.18285, 0.671477, 1.09991, 0.736715, 8.47769, 1.59582, 1.62163, 8.14229, 1.37321, 1.18285, 0.671477, 1.09991, 0.547527, 0.713121, 1.29611, 0.736715, 8.47769, 1.59582, 1.62163, 8.14229, 1.37321, 1.44058, 9.45953, 0.354579, 1.7558, 8.24072, 0.349572, 1.62163, 8.14229, 1.37321, 1.36657, 9.40524, 0.91924, 1.44058, 9.45953, 0.354579, -0.331822, 8.10313, -0.281313, 0.339725, 9.62589, 0.394524, -0.239878, 8.54229, 0.421987, -0.331822, 8.10313, -0.281313, 0.289007, 9.38364, 0.00656945, 0.339725, 9.62589, 0.394524, -0.390677, -1.41399, -0.567324, -0.220039, -1.66516, 1.19055, 0.474027, -1.5942, -0.932054, -0.390677, -1.41399, -0.567324, -0.617607, -1.54864, 0.238833, -0.220039, -1.66516, 1.19055, 1.34158, 0.576015, 0.222051, 1.7558, 8.24072, 0.349572, 1.93796, 8.14008, 0.149119, 1.34158, 0.576015, 0.222051, 1.30643, 0.609678, 0.841696, 1.7558, 8.24072, 0.349572, 0.474027, -1.5942, -0.932054, 2.05034, -1.68599, 1.20529, 2.10811, -1.75427, -0.342018, 0.474027, -1.5942, -0.932054, -0.220039, -1.66516, 1.19055, 2.05034, -1.68599, 1.20529, 0.200138, 0.705747, 1.15051, -0.239878, 8.54229, 0.421987, -0.222416, 7.9472, 1.81693, 0.200138, 0.705747, 1.15051, 0.124457, 0.684209, 0.468262, -0.239878, 8.54229, 0.421987, -0.239878, 8.54229, 0.421987, 0.349357, 9.29762, 1.164, -0.222416, 7.9472, 1.81693, -0.239878, 8.54229, 0.421987, 0.339725, 9.62589, 0.394524, 0.349357, 9.29762, 1.164, 0.909787, 9.88224, 0.419544, 0.349357, 9.29762, 1.164, 0.339725, 9.62589, 0.394524, 0.909787, 9.88224, 0.419544, 0.878434, 9.59025, 1.04204, 0.349357, 9.29762, 1.164, 1.44058, 9.45953, 0.354579, 0.878434, 9.59025, 1.04204, 0.909787, 9.88224, 0.419544, 1.44058, 9.45953, 0.354579, 1.36657, 9.40524, 0.91924, 0.878434, 9.59025, 1.04204, 1.54107, 9.40402, 0.244005, 0.909787, 9.88224, 0.419544, 0.939271, 9.65281, 0.169809, 1.54107, 9.40402, 0.244005, 1.44058, 9.45953, 0.354579, 0.909787, 9.88224, 0.419544, 0.939271, 9.65281, 0.169809, 0.339725, 9.62589, 0.394524, 0.289007, 9.38364, 0.00656945, 0.939271, 9.65281, 0.169809, 0.909787, 9.88224, 0.419544, 0.339725, 9.62589, 0.394524, 1.93796, 8.14008, 0.149119, 0.939271, 9.65281, 0.169809, 0.847003, 8.5911, 0.0146146, 1.93796, 8.14008, 0.149119, 1.54107, 9.40402, 0.244005, 0.939271, 9.65281, 0.169809, -0.222416, 7.9472, 1.81693, 0.878434, 9.59025, 1.04204, 0.736715, 8.47769, 1.59582, -0.222416, 7.9472, 1.81693, 0.349357, 9.29762, 1.164, 0.878434, 9.59025, 1.04204, 0.847003, 8.5911, 0.0146146, 0.289007, 9.38364, 0.00656945, -0.331822, 8.10313, -0.281313, 0.847003, 8.5911, 0.0146146, 0.939271, 9.65281, 0.169809, 0.289007, 9.38364, 0.00656945, 0.736715, 8.47769, 1.59582, 1.36657, 9.40524, 0.91924, 1.62163, 8.14229, 1.37321, 0.736715, 8.47769, 1.59582, 0.878434, 9.59025, 1.04204, 1.36657, 9.40524, 0.91924, -0.427392, -1.38905, 1.73608, 0.124457, 0.684209, 0.468262, 0.200138, 0.705747, 1.15051, -0.427392, -1.38905, 1.73608, -0.617607, -1.54864, 0.238833, 0.124457, 0.684209, 0.468262, 2.10811, -1.75427, -0.342018, 1.30643, 0.609678, 0.841696, 1.34158, 0.576015, 0.222051, 2.10811, -1.75427, -0.342018, 2.05034, -1.68599, 1.20529, 1.30643, 0.609678, 0.841696, 1.75831, -1.51086, 1.68483, 0.547527, 0.713121, 1.29611, 1.18285, 0.671477, 1.09991, 1.75831, -1.51086, 1.68483, 0.291253, -1.46345, 2.14681, 0.547527, 0.713121, 1.29611, -0.390677, -1.41399, -0.567324, 0.626682, 0.669729, -0.0182351, 0.206985, 0.706708, 0.104212, -0.390677, -1.41399, -0.567324, 0.474027, -1.5942, -0.932054, 0.626682, 0.669729, -0.0182351, 0.474027, -1.5942, -0.932054, 1.34158, 0.576015, 0.222051, 0.626682, 0.669729, -0.0182351, 0.474027, -1.5942, -0.932054, 2.10811, -1.75427, -0.342018, 1.34158, 0.576015, 0.222051, 2.05034, -1.68599, 1.20529, 1.18285, 0.671477, 1.09991, 1.30643, 0.609678, 0.841696, 2.05034, -1.68599, 1.20529, 1.75831, -1.51086, 1.68483, 1.18285, 0.671477, 1.09991, -0.617607, -1.54864, 0.238833, 0.206985, 0.706708, 0.104212, 0.124457, 0.684209, 0.468262, -0.617607, -1.54864, 0.238833, -0.390677, -1.41399, -0.567324, 0.206985, 0.706708, 0.104212, 0.291253, -1.46345, 2.14681, 0.200138, 0.705747, 1.15051, 0.547527, 0.713121, 1.29611, 0.291253, -1.46345, 2.14681, -0.427392, -1.38905, 1.73608, 0.200138, 0.705747, 1.15051)

[sub_resource type="Animation" id="Animation_3al55"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_6ucu6"]
resource_name = "falling"
length = 2.7
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.375, 0.9, 1.15, 1.325, 1.45, 1.475, 1.55, 1.625, 1.675, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0695689, 0, 0), Vector3(-0.331368, 0, 0), Vector3(-0.560443, 0, 0), Vector3(-1.08385, 0, 0), Vector3(-1.5708, 0, 0), Vector3(-1.5708, 0, 0), Vector3(-1.48521, 0, 0), Vector3(-1.5708, 0, 0), Vector3(-1.5708, 0, 0), Vector3(-1.5708, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4xeuk"]
_data = {
"RESET": SubResource("Animation_3al55"),
"falling": SubResource("Animation_6ucu6")
}

[node name="pushableRock" type="Node3D"]
script = ExtResource("1_c5q0t")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(2.1, 0, 0, 0, 13.2489, 0, 0, 0, 0.399999, 0, 6.65763, 0.192411)
mesh = SubResource("PlaceholderMesh_pv0oc")

[node name="Area3D" type="Area3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, -2.38419e-07, 1, 0.00592036, -0.384537, -0.0649412)
shape = SubResource("BoxShape3D_38jnt")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("BoxShape3D_kt7ec")

[node name="rock_10" type="Node3D" parent="MeshInstance3D"]
transform = Transform3D(0.666667, 0, 0, 0, 0.13586, -7.50333e-14, 0, 5.45697e-12, 3.30001, 0, -0.502504, -0.481029)

[node name="rock10" type="MeshInstance3D" parent="MeshInstance3D/rock_10"]
transform = Transform3D(0.667152, 0, 0, 0, 0.667152, 0, 0, 0, 0.667152, -0.280781, 1, -0.52911)
mesh = SubResource("ArrayMesh_cuuiv")
skeleton = NodePath("")
surface_material_override/1 = SubResource("StandardMaterial3D_10ww7")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D/rock_10/rock10"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/rock_10/rock10/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_o2l6s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4xeuk")
}

[connection signal="area_entered" from="MeshInstance3D/Area3D" to="." method="_on_area_3d_area_entered"]
